tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_85.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  y := z;
               y := ((y DIV 1) MOD z);
               r := ((- y) <= 2);
               p := ((1223 DIV ((200 + 1223) + (x + 1))) < x);
               y := (0 MOD x);
               z := (- 1);
               x := 200;
               y := 200;
               z := (((1 MOD (2 + y)) MOD 1) - (2 + ((x - 1223) - (x MOD y))));
               z := 200
END Test11.